k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local          # domain local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-node-app-service
                port:
                  number: 80
